src/main/java/com/example/nbd/exceptions/invalidParametersExceptions/InvalidUserException.java
package com.example.nbd.exceptions.invalidParametersExceptions;

public class InvalidUserException extends InvalidParametersException {

        public InvalidUserException() {
            super("Invalid user");
        }
}
